--- a/models/fintech_sample_catalog_analysis.ipynb
+++ b/models/fintech_sample_catalog_analysis.ipynb
@@ -41,7 +41,7 @@
    ],
    "source": [
     "#read csv\n",
-    "master_catalog_data_frame = pandas.read_csv('data/fintech_data/Master_Catalog_Sheet1.csv')"
+    "master_catalog_data_frame = pandas.read_csv('Master_Catalog_Sheet1.csv')"
    ]
   },
   {
